--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <h3>Tornado Azure</h3>
+        <h3>waoohooooho weewa</h3>
         <p>This is the where you would have a page...</p>
     </body>
 </html>
